Fixed an issue with alignment

--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,7 @@ body {
 
 .extraInfo > ul {
 	margin-top: 0;
+	margin-left: 1rem;
 }
 
 .skills li::before,
